; ModuleID = '/home/carl/AnghaBench/radare2/libr/asm/arch/xtensa/gnu/extr_xtensa-modules.c_Operand_ai4const_encode.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/asm/arch/xtensa/gnu/extr_xtensa-modules.c_Operand_ai4const_encode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @Operand_ai4const_encode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @Operand_ai4const_encode(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = load i32, i32* %5, align 4
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  switch i32 %7, label %23 [
    i32 -1, label %8
    i32 1, label %9
    i32 2, label %10
    i32 3, label %11
    i32 4, label %12
    i32 5, label %13
    i32 6, label %14
    i32 7, label %15
    i32 8, label %16
    i32 9, label %17
    i32 10, label %18
    i32 11, label %19
    i32 12, label %20
    i32 13, label %21
    i32 14, label %22
  ]

8:                                                ; preds = %1
  store i32 0, i32* %3, align 4
  br label %24

9:                                                ; preds = %1
  store i32 1, i32* %3, align 4
  br label %24

10:                                               ; preds = %1
  store i32 2, i32* %3, align 4
  br label %24

11:                                               ; preds = %1
  store i32 3, i32* %3, align 4
  br label %24

12:                                               ; preds = %1
  store i32 4, i32* %3, align 4
  br label %24

13:                                               ; preds = %1
  store i32 5, i32* %3, align 4
  br label %24

14:                                               ; preds = %1
  store i32 6, i32* %3, align 4
  br label %24

15:                                               ; preds = %1
  store i32 7, i32* %3, align 4
  br label %24

16:                                               ; preds = %1
  store i32 8, i32* %3, align 4
  br label %24

17:                                               ; preds = %1
  store i32 9, i32* %3, align 4
  br label %24

18:                                               ; preds = %1
  store i32 10, i32* %3, align 4
  br label %24

19:                                               ; preds = %1
  store i32 11, i32* %3, align 4
  br label %24

20:                                               ; preds = %1
  store i32 12, i32* %3, align 4
  br label %24

21:                                               ; preds = %1
  store i32 13, i32* %3, align 4
  br label %24

22:                                               ; preds = %1
  store i32 14, i32* %3, align 4
  br label %24

23:                                               ; preds = %1
  store i32 15, i32* %3, align 4
  br label %24

24:                                               ; preds = %23, %22, %21, %20, %19, %18, %17, %16, %15, %14, %13, %12, %11, %10, %9, %8
  %25 = load i32, i32* %3, align 4
  %26 = load i32*, i32** %2, align 8
  store i32 %25, i32* %26, align 4
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
